--- a/Fabflix/Project1/pom.xml
+++ b/Fabflix/Project1/pom.xml
@@ -22,6 +22,12 @@
             <version>8.0.23</version>
         </dependency>
         <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <version>1.9.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
@@ -32,6 +38,7 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>
+
     </dependencies>
 
     <build>
