--- a/Fabflix/Project1/web/WEB-INF/web.xml
+++ b/Fabflix/Project1/web/WEB-INF/web.xml
@@ -9,19 +9,27 @@
 
     <!-- Register the DataSource which defined in META-INF/context.xml-->
     <resource-ref>
-        <description>MySQL DataSource example</description>
+        <description>MySQL DataSource moviedb</description>
         <res-ref-name>jdbc/moviedb</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
 
-    <security-constraint>
-        <web-resource-collection>
-            <web-resource-name>HTTPSOnly</web-resource-name>
-            <url-pattern>/*</url-pattern>
-        </web-resource-collection>
-        <user-data-constraint>
-            <transport-guarantee>CONFIDENTIAL</transport-guarantee>
-        </user-data-constraint>
-    </security-constraint>
+    <resource-ref>
+        <description>MySQL DataSource Masterdb</description>
+        <res-ref-name>jdbc/masterdb</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
+<!--    <security-constraint>-->
+<!--        <web-resource-collection>-->
+<!--            <web-resource-name>HTTPSOnly</web-resource-name>-->
+<!--            <url-pattern>/*</url-pattern>-->
+<!--        </web-resource-collection>-->
+<!--        <user-data-constraint>-->
+<!--            <transport-guarantee>CONFIDENTIAL</transport-guarantee>-->
+<!--        </user-data-constraint>-->
+<!--    </security-constraint>-->
+
 </web-app>
